# FragPipe-Limited-Proteolysis-Processor

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.txt  README.md  pyproject.toml
archive_flippr/: flippr.py  flippr_tools.py  fragpipe_ion.py  fragpipe_protein.py
docs/: api.rst  conf.py  examples.rst  getting_started.rst  how_to_cite.rst  index.rst  quickstart.rst  requirements.txt
docs/how_to_use/: rcParams.rst
flippr/: __init__.py
flippr/_flippr_io/: _fragpipe_parser.py  _msg.py  _params.py
src/flippr/: __about__.py  __init__.py  combine.py  datatypes.py  flippr.py  functions.py  parameters.py  reader.py  spr.py  validate.py
src/flippr/uniprot/: fasta.py  metadata.py
tests/: Native_v_Refolded_001_min_flippr_cut_site.xlsx  Native_v_Refolded_001_min_flippr_protein_summary.xlsx  Native_v_Refolded_005_min_flippr_cut_site.xlsx  Native_v_Refolded_005_min_flippr_protein_summary.xlsx  Native_v_Refolded_120_min_flippr_cut_site.xlsx  Native_v_Refolded_120_min_flippr_protein_summary.xlsx  UP000000625_83333.fasta  __init__.py  fp_test.py  interative_test.ipynb  uniprot_data.json
tests/LFQ/LiP/: combined_protein.tsv  experiment_annotation.tsv
tests/LFQ/TrP/: combined_protein.tsv  experiment_annotation.tsv
